# raving-wgpu

./: Cargo.toml  build.rs
examples/: cube.rs  egui.rs  game_of_life.rs  game_of_life.wgsl  genome_graph_2d.rs  gfa_path.rs  graph.rs  graph_datafrog.rs  input.rs  lyon.rs  multi_window.rs  polyline.rs  shader_reflect.rs  simple_graph.rs  triangle.rs
shaders/: fullscreen.vert  fullscreen.vert.spv  game_of_life.comp  game_of_life.comp.spv  game_of_life.frag  game_of_life.frag.spv  shader.comp  shader.comp.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  test.wgsl  uv_rb.frag  uv_rb.frag.spv
shaders/examples/: cube.frag  cube.frag.spv  game_of_life.comp.spv  game_of_life.frag  game_of_life.frag.spv  line_segment.vert  line_segment.vert.spv  lyon.vert  polyline.frag  polyline.frag.spv  polyline.vert  polyline.vert.spv
src/: camera.rs  graph.rs  gui.rs  input.rs  lib.rs  node.rs  shader.rs  texture.rs  util.rs
src/graph/: dfrog.rs
src/shader/: interface.rs  render.rs
