[package]
name = "raving-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"

gilrs = "0.9.0"
pasts = "0.8"
stick = "0.12"
fishsticks = "0.2"

wgpu = { version = "0.14", features = ["spirv"] }
naga = { version = "0.10", features = ["clone", "spv-in", "glsl-in", "spv-out"] }

crossbeam = "0.8"
parking_lot = "0.11.1"

bytemuck = { version = "1.4", features = [ "derive" ] }
datafrog = "2.0.1"

ultraviolet = { version = "0.9", features = ["bytemuck", "f64"]}

image = "0.24"

rustc-hash = "1.1"
rhai = { version = "1.10.1", features = ["sync", "f32_float"]}

anyhow = "1.0"


[dev-dependencies]
pollster = "0.2"
rand = "0.8.5"

[[example]]
name = "triangle"
path = "examples/triangle.rs"

[[example]]
name = "polyline"
path = "examples/polyline.rs"

[[example]]
name = "shader_reflect"
path = "examples/shader_reflect.rs"

[[example]]
name = "simple_graph"
path = "examples/simple_graph.rs"

[[example]]
name = "game_of_life"
path = "examples/game_of_life.rs"

[[example]]
name = "genome_graph_2d"
path = "examples/genome_graph_2d.rs"

[[example]]
name = "input"
path = "examples/input.rs"