[package]
name = "raving-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"

# egui-wgpu hasn't been published with wgpu 0.14 support yet,
# so grabbing a git commit for now
# egui = { version = "0.19" }
# egui-wgpu = { version = "0.19" }
# egui-winit = { version = "0.19" }

egui = { git = "https://github.com/emilk/egui.git", rev = "4c82519" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", rev = "4c82519" }
egui-winit = { git = "https://github.com/emilk/egui.git", rev = "4c82519" }
# egui-wgpu = { version = "0.19", features = ["winit"] }

lyon = "1.0"

wgpu = { version = "0.14", features = ["spirv"] }
naga = { version = "0.10", features = ["clone", "spv-in", "glsl-in", "spv-out"] }

crossbeam = "0.8"
parking_lot = "0.11.1"

bytemuck = { version = "1.4", features = [ "derive" ] }
datafrog = "2.0.1"

ultraviolet = { version = "0.9", features = ["bytemuck", "f64"]}

image = "0.24"

rustc-hash = "1.1"
rhai = { version = "1.10.1", features = ["sync", "f32_float"]}

anyhow = "1.0"


[dev-dependencies]
pollster = "0.2"
rand = "0.8.5"


[target.'cfg(target_os = "android")'.dependencies]
jni = "0.19"
libc = "0.2"
log = "0.4.14"
ndk = { version = "0.7", features = ["api-level-23"] }
ndk-context = { version = "0.1.1" }
ndk-glue = { version = "0.7", features = ["logger"] }

[[example]]
name = "cube-android"
path = "examples/cube.rs"
crate-type = ["cdylib"]

[[example]]
name = "cube"
path = "examples/cube.rs"

[[example]]
name = "gfa_path"
path = "examples/gfa_path.rs"

[[example]]
name = "graph"
path = "examples/graph.rs"


[[example]]
name = "triangle"
path = "examples/triangle.rs"

[[example]]
name = "polyline"
path = "examples/polyline.rs"

[[example]]
name = "shader_reflect"
path = "examples/shader_reflect.rs"

[[example]]
name = "simple_graph"
path = "examples/simple_graph.rs"

[[example]]
name = "game_of_life"
path = "examples/game_of_life.rs"

[[example]]
name = "genome_graph_2d"
path = "examples/genome_graph_2d.rs"

[[example]]
name = "input"
path = "examples/input.rs"

[[example]]
name = "egui"
path = "examples/egui.rs"